# 8311-lantiq-firmware

./: .gitignore  .shellcheckrc  CLAUDE.md  INTERNALS.md  IOCTL_COMPAT.md  README.md  build.sh  excludes  pseudofile
omcid/gpon_omci_api-4.5.0/: ChangeLog  LICENSE  Makefile.am  Makefile.in  TODO  configure  configure.in
omcid/gpon_omci_api-4.5.0/doc/: doxyconfig
omcid/gpon_omci_api-4.5.0/include/: omci_8311_log.h  omci_api.h  omci_api_config.h  omci_api_config.h.in  omci_api_usock.h
omcid/gpon_omci_api-4.5.0/include/mcc/: omci_api_mcc.h
omcid/gpon_omci_api-4.5.0/include/me/: omci_api_ani_g.h  omci_api_call_control_pmhd.h  omci_api_cardholder.h  omci_api_circuit_pack.h  omci_api_dot1p_mapper.h  omci_api_dot1p_rate_limiter.h  omci_api_dot1x_port_ext_pkg.h  omci_api_equipment_extension_package.h  omci_api_ethernet_ds_pmhd.h  omci_api_ethernet_pmhd.h  omci_api_ethernet_pmhd2.h  omci_api_ethernet_pmhd3.h  omci_api_ethernet_us_pmhd.h  omci_api_extended_vlan_config_data.h  omci_api_extended_vlan_table.h  omci_api_fec_pmhd.h  omci_api_gal_ethernet_pmhd.h  omci_api_gal_ethernet_profile.h  omci_api_gem_interworking_tp.h  omci_api_gem_port_network_ctp.h  omci_api_gem_port_pmhd.h  omci_api_mac_bridge_pmhd.h  omci_api_mac_bridge_port_bridge_table_data.h  omci_api_mac_bridge_port_config_data.h  omci_api_mac_bridge_port_config_data_intern.h  omci_api_mac_bridge_port_designation_data.h  omci_api_mac_bridge_port_filter_preassign_table.h  omci_api_mac_bridge_port_filter_table_data.h  omci_api_mac_bridge_port_pmhd.h  omci_api_mac_bridge_service_profile.h  omci_api_mac_bridge_service_profile_intern.h  omci_api_multicast_gem_interworking_tp.h  omci_api_multicast_operations_profile.h  omci_api_multicast_subscr_config_info.h  omci_api_multicast_subscr_monitor.h  omci_api_olt_g.h  omci_api_onu2_g.h  omci_api_onu_dyn_pwr_mngmt_ctrl.h  omci_api_onu_g.h  omci_api_onu_loop_detection.h  (+20 more)
omcid/gpon_omci_api-4.5.0/include/voip/: omci_api_voip.h
omcid/gpon_omci_api-4.5.0/src/: Makefile.am  Makefile.in  omci_api.c  omci_api_common.h  omci_api_debug.h  omci_api_event.c  omci_api_event.h  omci_api_mapper.c  omci_api_mapper.h  omci_api_std_defs.h  omci_api_timer.c  omci_api_timer.h  omci_api_usock.c
omcid/gpon_omci_api-4.5.0/src/mcc/: omci_api_mcc.c  omci_api_mcc_common.h
omcid/gpon_omci_api-4.5.0/src/me/: omci_api_ani_g.c  omci_api_call_control_pmhd.c  omci_api_cardholder.c  omci_api_circuit_pack.c  omci_api_dot1p_mapper.c  omci_api_dot1p_rate_limiter.c  omci_api_dot1x_port_ext_pkg.c  omci_api_equipment_extension_package.c  omci_api_ethernet_ds_pmhd.c  omci_api_ethernet_pmhd.c  omci_api_ethernet_pmhd2.c  omci_api_ethernet_pmhd3.c  omci_api_ethernet_us_pmhd.c  omci_api_extended_vlan_config_data.c  omci_api_extended_vlan_table.c  omci_api_fec_pmhd.c  omci_api_gal_ethernet_pmhd.c  omci_api_gal_ethernet_profile.c  omci_api_olt_g.c  (+41 more)
omcid/gpon_omci_api-4.5.0/tools/: Makefile.am  Makefile.in  omci_usock_server  omci_usock_server.c  omci_usock_server.h
omcid/gpon_omci_onu-4.5.0/: ChangeLog  Makefile.am  Makefile.in  TODO  configure  configure.in
omcid/gpon_omci_onu-4.5.0/doc/: doxyconfig  doxyconfig_me
omcid/gpon_omci_onu-4.5.0/include/: omci_config.h  omci_config.h.in  omci_interface.h  omci_interface_types.h  omci_msg.h  omci_types.h
omcid/gpon_omci_onu-4.5.0/scripts/: bootscript.hush
omcid/gpon_omci_onu-4.5.0/src/: Makefile.am  Makefile.in  omci_alarm.c  omci_alarm.h  omci_common.h  omci_config_api.c  omci_config_api.h  omci_core.c  omci_core.h  omci_debug.c  omci_debug.h  omci_interface.c  omci_list.c  omci_list.h  omci_me.c  omci_me.h  omci_me_def.c  omci_me_def.h  omci_me_handlers.c  omci_me_handlers.h  omci_mib.c  omci_mib.h  omci_msg_dump.c  omci_msg_dump.h  omci_net.c  omci_net.h  omci_os.c  omci_os.h  omci_pm.c  omci_pm.h  omci_self_desc.h  omci_timeout.c  omci_timeout.h  omci_ubus.c  omci_ubus.h
omcid/gpon_omci_onu-4.5.0/tools/: Makefile.am  Makefile.in  omci_simulate  omci_simulate.c
omcid/gpon_onu_drv-4.5.0/: ChangeLog  Makefile.am  Makefile.in  TODO  configure  configure.in
omcid/gpon_onu_drv-4.5.0/doc/: doxyconfig
omcid/gpon_onu_drv-4.5.0/led-trigger/: ChangeLog  Makefile.am  Makefile.in  drv_onu_led_trigger.c  drv_onu_led_trigger.h
omcid/gpon_onu_drv-4.5.0/netdev/: ChangeLog  Makefile.am  Makefile.in  drv_onu_netdev.c  drv_onu_netdev.h
omcid/gpon_onu_drv-4.5.0/src/: Makefile.am  Makefile.in  drv_onu_api.h  drv_onu_base.c  drv_onu_cli.c  drv_onu_cli_core.c  drv_onu_cli_core.h  drv_onu_cli_dump.c  drv_onu_cli_dump.h  drv_onu_cli_dump_misc.c  drv_onu_cli_dump_misc.h  drv_onu_cli_misc.c  drv_onu_common.c  drv_onu_config.h.in  drv_onu_debug.h  drv_onu_devio.c  drv_onu_event_api.h  drv_onu_gpe.c  drv_onu_gpe_api.h  drv_onu_gpe_tables.c  drv_onu_gpe_tables_api.h  drv_onu_gtc.c  drv_onu_gtc_api.h  drv_onu_lan.c  drv_onu_lan_api.h  drv_onu_lan_api_intern.h  drv_onu_linux.c  drv_onu_ll_cop.c  drv_onu_ll_cop.h  drv_onu_ll_eim.c  drv_onu_ll_eim.h  drv_onu_ll_fsqm.c  drv_onu_ll_fsqm.h  drv_onu_ll_gpearb.c  drv_onu_ll_gpearb.h  drv_onu_ll_gtc.c  drv_onu_ll_gtc.h  drv_onu_ll_ictrlg.c  drv_onu_ll_ictrlg.h  drv_onu_ll_ictrll.c  (+63 more)
omcid/gpon_optic_drv/: ChangeLog  LICENSE  Makefile.am  Makefile.in  TODO  configure  configure.in
omcid/gpon_optic_drv/doc/: doxyconfig
omcid/gpon_optic_drv/src/: Makefile.am  Makefile.in  drv_optic_api.h  drv_optic_base.c  drv_optic_bert.c  drv_optic_bosa.c  drv_optic_bosa.h  drv_optic_cal.c  drv_optic_calc.c  drv_optic_calc.h  drv_optic_cli.c  drv_optic_cli_core.c  drv_optic_cli_core.h  drv_optic_cli_misc.c  drv_optic_common.c  drv_optic_common.h  drv_optic_config.h.in  drv_optic_dcdc_apd.c  drv_optic_dcdc_apd.h  drv_optic_dcdc_core.c  drv_optic_dcdc_core.h  drv_optic_dcdc_ddr.c  drv_optic_dcdc_ddr.h  drv_optic_debug.h  drv_optic_devio.c  drv_optic_fcsi.c  drv_optic_fcsi.h  drv_optic_goi.c  drv_optic_ldo.c  drv_optic_linux.c  drv_optic_ll_bert.c  drv_optic_ll_bert.h  drv_optic_ll_dcdc_apd.c  drv_optic_ll_dcdc_apd.h  drv_optic_ll_dcdc_core.c  drv_optic_ll_dcdc_core.h  drv_optic_ll_dcdc_ddr.c  drv_optic_ll_dcdc_ddr.h  drv_optic_ll_fcsi.c  drv_optic_ll_fcsi.h  (+60 more)
(+430 files in other folders)
