dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.18 $)

AC_INIT([OMCI API],[4.5.0],[],[gpon_omci_api])
AC_CONFIG_SRCDIR(src/Makefile.am)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(include/omci_api_config.h)

AC_PROG_CC
ifdef([AC_PROG_CC_STDC], [AC_PROG_CC_STDC])
AC_LANG([C])
AC_PROG_RANLIB
AM_PROG_CC_C_O

#
# save the configure arguments
#
CONFIGURE_OPTIONS="$ac_configure_args"
AC_SUBST(CONFIGURE_OPTIONS)

AC_CHECK_HEADERS([getopt.h])
AC_TYPE_LONG_LONG_INT

AH_TOP(
   [
#ifndef _omci_api_config_h
#define _omci_api_config_h
   ]
)

AH_BOTTOM(
   [
#endif
   ]
)

dnl set lib_ifxos include path
DEFAULT_IFXOS_INCLUDE_PATH=''
AC_ARG_ENABLE(ifxos-include,
   AS_HELP_STRING([--enable-ifxos-include=-I/path/to/your/lib_ifxos/src/include],[set the lib_ifxos include path]),
   [
    if test -n "$enableval"; then
       echo Set the lib_ifxos include path to $enableval
       AC_SUBST([IFXOS_INCLUDE_PATH],[$enableval])
    else
       echo Set the lib_ifxos include path to $DEFAULT_IFXOS_INCLUDE_PATH
       AC_SUBST([IFXOS_INCLUDE_PATH],[$DEFAULT_IFXOS_INCLUDE_PATH])
    fi
   ],
   [
      echo Set the lib_ifxos include path to $DEFAULT_IFXOS_INCLUDE_PATH
      AC_SUBST([IFXOS_INCLUDE_PATH],[$DEFAULT_IFXOS_INCLUDE_PATH])
   ]
)

dnl set driver include path
DEFAULT_DRIVER_INCLUDE_PATH=''
AC_ARG_ENABLE(driver-include,
   AS_HELP_STRING([--enable-driver-include=-I/path/to/your/driver/include],[set the driver include path]),
   [
    if test -n "$enableval"; then
       echo Set the driver include path to $enableval
       AC_SUBST([DRIVER_INCLUDE_PATH],[$enableval])

    else
       echo Set the driver include path to $DEFAULT_DRIVER_INCLUDE_PATH
       AC_SUBST([DRIVER_INCLUDE_PATH],[$DEFAULT_DRIVER_INCLUDE_PATH])
    fi
   ],
   [
      echo Set the driver include path to $DEFAULT_DRIVER_INCLUDE_PATH
      AC_SUBST([DRIVER_INCLUDE_PATH],[$DEFAULT_DRIVER_INCLUDE_PATH])
   ]
)

dnl enable\disable driver support
AC_SUBST([INCLUDE_DRIVER_SIMULATION],[no])
AC_ARG_ENABLE(driver-simulation,
              AS_HELP_STRING([--enable-driver-simulation],
                             [enable driver simulation]),
   [
      if test "$enableval" = yes; then
         echo Enable driver simulation
         AC_DEFINE([INCLUDE_DRIVER_SIMULATION], [1], [Enable driver simulation])
         AC_SUBST([INCLUDE_DRIVER_SIMULATION],[$enableval])
         AM_CONDITIONAL(INCLUDE_DRIVER_SIMULATION, true)
      else
         echo Disable driver simulation
         AM_CONDITIONAL(INCLUDE_DRIVER_SIMULATION, false)
      fi
   ],
   [
      echo Disable driver simulation
      AM_CONDITIONAL(INCLUDE_DRIVER_SIMULATION, false)
   ]
)

dnl enable\disable remote ONU
AC_SUBST([INCLUDE_REMOTE_ONU],[yes])
AC_ARG_ENABLE(remote-onu,
              AS_HELP_STRING([--enable-remote-onu],
                             [enable remote ONU]),
   [
      if test "$enableval" = yes; then
         echo Enable remote ONU
         AC_DEFINE([INCLUDE_REMOTE_ONU], [1], [Enable remote ONU])
         AC_SUBST([INCLUDE_REMOTE_ONU],[$enableval])
         AM_CONDITIONAL(INCLUDE_REMOTE_ONU, true)
      else
         echo Disable remote ONU
         AM_CONDITIONAL(INCLUDE_REMOTE_ONU, false)
      fi
   ],
   [
      echo Enable remote ONU
      AC_DEFINE([INCLUDE_REMOTE_ONU], [1], [Enable remote ONU])
      AC_SUBST([INCLUDE_REMOTE_ONU],[$enableval])
      AM_CONDITIONAL(INCLUDE_REMOTE_ONU, true)
   ]
)

dnl enable\disable sw image support
AC_ARG_ENABLE(falcon-sw-image-support,
              AS_HELP_STRING([--enable-falcon-sw-image-support],
                             [enable Falcon software image support]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_SW_IMAGE_SUPPORT], [1], [Enable Falcon software image support])
         echo Enable Falcon software image support
      else
         echo Disable Falcon software image support
      fi
   ],
   [
      echo Disable Falcon software image support
   ]
)

dnl enable\disable debug printouts
AC_ARG_ENABLE(debug-prints,
              AS_HELP_STRING([--enable-debug-prints],[enable debug printouts]),
   [
      if test "$enableval" = yes; then
         echo Enable debug printouts
      else
         AC_DEFINE([OMCI_API_DEBUG_DISABLE], [1],[Disable debug printouts])
         echo Disable debug printouts
      fi
   ],
   [
      AC_DEFINE([OMCI_API_DEBUG_DISABLE], [1],[Disable debug printouts])
      echo Disable debug printouts
   ]
)

dnl enable\disable VoIP support
AC_SUBST([INCLUDE_OMCI_API_VOIP],[no])
AC_ARG_ENABLE(voip,
              AS_HELP_STRING([--enable-voip],[enable VoIP support]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_OMCI_API_VOIP], [1], [Enable VoIP support])
         AC_SUBST([INCLUDE_OMCI_API_VOIP],[yes])
         AM_CONDITIONAL(INCLUDE_OMCI_API_VOIP, true)
         echo Enable VoIP support
      else
         AM_CONDITIONAL(INCLUDE_OMCI_API_VOIP, false)
         echo Disable VoIP support
      fi
   ],
   [
      AM_CONDITIONAL(INCLUDE_OMCI_API_VOIP, false)
      echo Disable VoIP support
   ]
)

dnl set PJSIP include path
AC_SUBST([PJSIP_INCLUDE_PATH],[''])
AC_ARG_ENABLE(pjsip-include,
    AC_HELP_STRING([--enable-pjsip-include=-I/path/to/your/pjsip/include], [Set the PJSIP include path.]),
    [
        if test -n "$enableval"; then
            if test "$INCLUDE_OMCI_API_VOIP" = no; then
               AC_MSG_WARN(["Specified PJSIP include path without VoIP support enabled"])
            fi

            echo Set the PJSIP include path $enableval
            AC_SUBST([PJSIP_INCLUDE_PATH],[$enableval])
        else
           if test "$INCLUDE_OMCI_API_VOIP" = yes; then
               AC_MSG_ERROR(["Please specify PJSIP include path"])
           fi
        fi
    ],
    [
        if test "$INCLUDE_OMCI_API_VOIP" = yes; then
            AC_MSG_ERROR(["Please specify PJSIP include path"])
        fi
    ]
)

dnl set TAPI include path
AC_SUBST([TAPI_INCLUDE_PATH],[''])
AC_ARG_ENABLE(tapi-include,
    AC_HELP_STRING([--enable-tapi-include=-I/path/to/your/drv_tapi/src/include], [Set the TAPI include path.]),
    [
        if test -n "$enableval"; then
            if test "$INCLUDE_OMCI_API_VOIP" = no; then
               AC_MSG_WARN(["Specified TAPI include path without VoIP support enabled"])
            fi

            echo Set the TAPI include path $enableval
            AC_SUBST([TAPI_INCLUDE_PATH],[$enableval])
        else
           if test "$INCLUDE_OMCI_API_VOIP" = yes; then
               AC_MSG_ERROR(["Please specify TAPI include path"])
           fi
        fi
    ],
    [
        if test "$INCLUDE_OMCI_API_VOIP" = yes; then
            AC_MSG_ERROR(["Please specify PJSIP include path"])
        fi
    ]
)

dnl set VMMC driver include path
AC_SUBST([VMMC_INCLUDE_PATH],[''])
AC_ARG_ENABLE(vmmc-include,
    AC_HELP_STRING([--enable-vmmc-include=-I/path/to/your/drv_vmcc/include], [Set the VMMC driver include path.]),
    [
        if test -n "$enableval"; then
            if test "$INCLUDE_OMCI_API_VOIP" = no; then
               AC_MSG_WARN(["Specified VMMC include path without VoIP support enabled"])
            fi

            echo Set the VMMC driver include path $enableval
            AC_SUBST([VMMC_INCLUDE_PATH],[$enableval])
        else
           if test "$INCLUDE_OMCI_API_VOIP" = yes; then
               AC_MSG_ERROR(["Please specify VMMC include path"])
           fi
        fi
    ],
    [
        if test "$INCLUDE_OMCI_API_VOIP" = yes; then
            AC_MSG_ERROR(["Please specify VMMC include path"])
        fi
    ]
)

dnl set device type
AC_ARG_ENABLE(device,
   AS_HELP_STRING(
      [--enable-device=type],
      [Set the device type. Available options: PSB98010, PSB98020, PSB98030]
   ),
   [
      case $enableval in
      PSB98010|PSB98020|PSB98030)
         AC_SUBST([ONU_DEVICE_PSB980xx],[ONU_DEVICE_$enableval])
         echo "Selected device type: $enableval"
         ;;
      *) AC_MSG_ERROR([Device selection invalid: $enableval]);
         ;;
      esac
   ],
   [
      echo "Automatically selected device type: PSB98030"
      AC_SUBST([ONU_DEVICE_PSB980xx],[ONU_DEVICE_PSB98030])
   ]
)

dnl enable\disable Multicast Control support
AC_SUBST([INCLUDE_OMCI_API_MCC],[no])
AC_ARG_ENABLE(mcc,
              AS_HELP_STRING([--enable-mcc],[enable MCC support]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_OMCI_API_MCC], [1], [Enable MCC support])
         AC_SUBST([INCLUDE_OMCI_API_MCC],[yes])
         AM_CONDITIONAL(INCLUDE_OMCI_API_MCC, true)
         echo Enable MCC support
      else
         AM_CONDITIONAL(INCLUDE_OMCI_API_MCC, false)
         echo Disable MCC support
      fi
   ],
   [
      AM_CONDITIONAL(INCLUDE_OMCI_API_MCC, true)
      echo Disable MCC support
   ]
)

dnl include\exclude dmalloc
AC_SUBST([INCLUDE_OMCI_API_DMALLOC],['no'])
AM_CONDITIONAL(INCLUDE_OMCI_API_DMALLOC, false)
AC_ARG_ENABLE(omci-dmalloc,
              AS_HELP_STRING([--enable-omci-dmalloc],
                             [enable dmalloc]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_OMCI_API_DMALLOC], [1],[Enable dmalloc])
         AM_CONDITIONAL(INCLUDE_OMCI_API_DMALLOC, true)
         echo Enable dmalloc
      else
         echo Disable dmalloc
      fi
   ],
   [
      echo Disable dmalloc
   ]
)

AC_CONFIG_FILES([Makefile src/Makefile tools/Makefile])
AC_OUTPUT

