dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.43 $)

AC_INIT([OMCI Test Software],[4.5.0],[],[gpon_omci_onu])
AC_CANONICAL_TARGET
AC_CONFIG_SRCDIR(src/Makefile.am)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(include/omci_config.h)

#
# save the configure arguments
#
CONFIGURE_OPTIONS="$ac_configure_args"
AC_SUBST(CONFIGURE_OPTIONS)

AC_PROG_CC
ifdef([AC_PROG_CC_STDC], [AC_PROG_CC_STDC])
AC_LANG([C])
AM_PROG_CC_C_O
AC_PROG_RANLIB

AC_CHECK_HEADERS([getopt.h])
AC_CHECK_HEADERS([sys/cdefs.h])

AC_HEADER_STDBOOL

AC_TYPE_LONG_LONG_INT

AC_CHECK_SIZEOF([_Bool])
AC_CHECK_SIZEOF([long long int])

AH_TOP(
   [
#ifndef _omci_config_h
#define _omci_config_h

/** \defgroup OMCI_CONFIG Optical Network Unit - Config
   @{
*/
   ]
)

AH_BOTTOM(
   [
/** @} */

#endif
   ]
)

dnl set lib_ifxos include path
DEFAULT_IFXOS_INCLUDE_PATH=''
AC_ARG_ENABLE(ifxos-include,
   AS_HELP_STRING([--enable-ifxos-include=-I/path/to/your/lib_ifxos/src/include],[set the lib_ifxos include path]),
   [
    if test -n "$enableval"; then
       echo Set the lib_ifxos include path to $enableval
       AC_SUBST([IFXOS_INCLUDE_PATH],[$enableval])
    else
       echo Set the lib_ifxos include path to $DEFAULT_IFXOS_INCLUDE_PATH
       AC_SUBST([IFXOS_INCLUDE_PATH],[$DEFAULT_IFXOS_INCLUDE_PATH])
    fi
   ],
   [
      echo Set the lib_ifxos include path to $DEFAULT_IFXOS_INCLUDE_PATH
      AC_SUBST([IFXOS_INCLUDE_PATH],[$DEFAULT_IFXOS_INCLUDE_PATH])
   ]
)

dnl set lib_ifxos library path
DEFAULT_IFXOS_LIBRARY_PATH=''
AC_ARG_ENABLE(ifxos-library,
   AS_HELP_STRING([--enable-ifxos-library=-L/path/to/your/lib_ifxos/src],[set the lib_ifxos library path]),
   [
    if test -n "$enableval"; then
       echo Set the lib_ifxos library path to $enableval
       AC_SUBST([IFXOS_LIBRARY_PATH],[$enableval])
    else
       echo Set the lib_ifxos library path to $DEFAULT_IFXOS_LIBRARY_PATH
       AC_SUBST([IFXOS_LIBRARY_PATH],[$DEFAULT_IFXOS_LIBRARY_PATH])
    fi
   ],
   [
      echo Set the lib_ifxos library path to $DEFAULT_IFXOS_LIBRARY_PATH
      AC_SUBST([IFXOS_LIBRARY_PATH],[$DEFAULT_IFXOS_LIBRARY_PATH])
   ]
)

dnl set cli library path
DEFAULT_CLI_LIBRARY_PATH=''
AC_ARG_ENABLE(cli-library,
	AS_HELP_STRING([--enable-cli-library=/path/to/your/libcli/src] , [Set the libcli.a library path. In this location the libcli.a should be found]),
	[
		if test -n "$enableval"; then
			echo Set the libcli.a library path to $enableval
			AC_SUBST([CLI_LIBRARY_PATH],[$enableval])
		else
			echo Set the libcli.a library path $DEFAULT_CLI_LIBRARY_PATH
			AC_SUBST([CLI_LIBRARY_PATH],[$DEFAULT_CLI_LIBRARY_PATH])
		fi
	],
	[
		echo Set the libcli.a library path $DEFAULT_CLI_LIBRARY_PATH
		AC_SUBST([CLI_LIBRARY_PATH],[$DEFAULT_CLI_LIBRARY_PATH])
	]
)

dnl set cli include path
DEFAULT_CLI_INCLUDE_PATH=''
AC_ARG_ENABLE(cli-include,
	AS_HELP_STRING([--enable-cli-include=-I/path/to/your/libcli/src/include],[Set the libcli.a include path.]),
	[
		if test -n "$enableval"; then
			echo Set the libcli.a include path $enableval
			AC_SUBST([CLI_INCLUDE_PATH],[$enableval])
		else
			echo -e Set the default libcli.a include path $DEFAULT_CLI_INCLUDE_PATH
			AC_SUBST([CLI_INCLUDE_PATH],[$DEFAULT_CLI_INCLUDE_PATH])
		fi
	],
	[
		echo -e Set the default libcli.a include path $DEFAULT_CLI_INCLUDE_PATH
		AC_SUBST([CLI_INCLUDE_PATH],[$DEFAULT_CLI_INCLUDE_PATH])
	]
)

dnl set OMCI API include path
DEFAULT_OMCI_API_INCLUDE_PATH=''
AC_ARG_ENABLE(omci-api-include,
   AS_HELP_STRING([--enable-omci-api-include=-I/path/to/your/gpon_omci_api/include],[set the OMCI API include path]),
   [
    if test -n "$enableval"; then
       echo Set the OMCI API include path to $enableval
       AC_SUBST([OMCI_API_INCLUDE_PATH],[$enableval])

       AC_DEFINE([INCLUDE_OMCI_API], [1], [Enable ONU driver])
       AM_CONDITIONAL(INCLUDE_OMCI_API, true)
    else
       echo Set the OMCI API include path to $DEFAULT_OMCI_API_INCLUDE_PATH
       AC_SUBST([OMCI_API_INCLUDE_PATH],[$DEFAULT_OMCI_API_INCLUDE_PATH])

       AM_CONDITIONAL(INCLUDE_OMCI_API, false)
    fi
   ],
   [
      echo Set the OMCI API include path to $DEFAULT_OMCI_API_INCLUDE_PATH
      AC_SUBST([OMCI_API_INCLUDE_PATH],[$DEFAULT_OMCI_API_INCLUDE_PATH])

      AM_CONDITIONAL(INCLUDE_OMCI_API, false)
   ]
)

dnl set OMCI API library path
DEFAULT_OMCI_API_LIBRARY_PATH=''
AC_ARG_ENABLE(omci-api-library,
   AS_HELP_STRING([--enable-omci-api-library=-L/path/to/your/gpon_omci_api/src],[set the OMCI API library path]),
   [
    if test -n "$enableval"; then
       echo Set the OMCI API library path to $enableval
       AC_SUBST([OMCI_API_LIBRARY_PATH],[$enableval])
    else
       echo Set the OMCI API library path to $DEFAULT_OMCI_API_LIBRARY_PATH
       AC_SUBST([OMCI_API_LIBRARY_PATH],[$DEFAULT_OMCI_API_LIBRARY_PATH])
    fi
   ],
   [
      echo Set the OMCI API library path to $DEFAULT_OMCI_API_LIBRARY_PATH
      AC_SUBST([OMCI_API_LIBRARY_PATH],[$DEFAULT_OMCI_API_LIBRARY_PATH])
   ]
)

dnl set OMCI extra dependency path
DEFAULT_OMCI_EXTRA_DEP_PATH=''
AC_ARG_ENABLE(omci-extra-dep,
   AS_HELP_STRING([--enable-omci-extra-dep=/path/to/your/extra/libs/foo.a],[set the complete library path, space separated]),
   [
    if test -n "$enableval"; then
       echo Set the extra dependecy path to $enableval
       AC_SUBST([OMCI_EXTRA_DEP_PATH],[$enableval])
    else
       echo Set the extra dependency path to $DEFAULT_OMCI_EXTRA_DEP_PATH
       AC_SUBST([OMCI_EXTRA_DEP_PATH],[$DEFAULT_OMCI_EXTRA_DEP_PATH])
    fi
   ],
   [
      echo Set the extra dependency path to $DEFAULT_OMCI_EXTRA_DEP_PATH
      AC_SUBST([OMCI_EXTRA_DEP_PATH],[$DEFAULT_OMCI_EXTRA_DEP_PATH])
   ]
)

dnl enable\disable debug printouts
AC_ARG_ENABLE(debug-prints,
              AS_HELP_STRING([--enable-debug-prints],[enable debug printouts]),
   [
      if test "$enableval" = yes; then
         echo Enable debug printouts
      else
         AC_DEFINE([OMCI_DEBUG_DISABLE], [1],[Disable debug printouts])
         echo Disable debug printouts
      fi
   ],
   [
      AC_DEFINE([OMCI_DEBUG_DISABLE], [1],[Disable debug printouts])
      echo Disable debug printouts
   ]
)

dnl enable\disable cli support
AC_SUBST([INCLUDE_CLI_SUPPORT],[no])
AC_ARG_ENABLE(cli,
              AS_HELP_STRING([--enable-cli],
                             [enable CLI support]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_CLI_SUPPORT], [1], [Enable CLI support])
         AC_SUBST([INCLUDE_CLI_SUPPORT],[$enableval])
         AM_CONDITIONAL(INCLUDE_CLI_SUPPORT, true)
         echo Enable CLI support
      else
         AM_CONDITIONAL(INCLUDE_CLI_SUPPORT, false)
         echo Disable CLI support
      fi
   ],
   [
      AM_CONDITIONAL(INCLUDE_CLI_SUPPORT, false)
      echo Disable CLI support
   ]
)

dnl enable\disable cli pipe support
AC_ARG_ENABLE(cli-pipe,
              AS_HELP_STRING([--enable-cli-pipe],
                             [enable CLI PIPE support (in order to include pipe support, you should also enable CLI support)]),
   [
      if test "$enableval" = yes; then
         if test "$INCLUDE_CLI_SUPPORT" = "no"; then
            AC_MSG_WARN(["In order to include pipe support, you should enable CLI support!"])
            echo Disable CLI pipe support
         else
            AC_DEFINE([INCLUDE_CLI_PIPE_SUPPORT], [1],[Enable pipe support])
            echo Enable CLI pipe support
         fi
      else
         echo Disable CLI pipe support
      fi
   ],
   [
      echo Disable CLI pipe support
   ]
)

dnl enable\disable formatted omci messages dump
AC_ARG_ENABLE(formatted-omci-dump,
              AS_HELP_STRING([--enable-formatted-omci-dump],
                             [enable formatted OMCI messages dump]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_FORMATTED_OMCI_DUMP], [1],[Enable Formatted OMCI messages dump])
         echo Enable Formatted OMCI messages dump
      else
         echo Disable Formatted OMCI messages dump
      fi
   ],
   [
      echo Disable Formatted OMCI messages dump
   ]
)

dnl include\exclude PM Managed Entities and PM funtionality
AC_ARG_ENABLE(pm,
              AS_HELP_STRING([--enable-pm],
                             [enable PM Managed Entities and PM funtionality]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_PM], [1],[Enable PM Managed Entities and PM funtionality])
         echo Enable PM Managed Entities and PM funtionality
      else
         echo Disable PM Managed Entities and PM funtionality
      fi
   ],
   [
      echo Disable PM Managed Entities and PM funtionality
   ]
)

dnl include\exclude OMCI Self Description Managed Entities
AC_ARG_ENABLE(omci-self-desc,
              AS_HELP_STRING([--enable-omci-self-desc],
                             [enable OMCI Self Description]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_OMCI_SELF_DESCRIPTION], [1],[Enable OMCI Self Description])
         echo Enable OMCI Self Description
      else
         echo Disable OMCI Self Description
      fi
   ],
   [
      echo Disable OMCI Self Description
   ]
)

dnl set received FIFO size
DEFAULT_RECEIVED_MSG_FIFO_SIZE='1024'
AC_ARG_ENABLE(received-msg-fifo-size,
              AS_HELP_STRING([--enable-received-msg-fifo-size=size],[set the received messages FIFO size]),
   [
    if test -n "$enableval"; then
       echo Set the received messages FIFO size to $enableval
      AC_DEFINE_UNQUOTED([OMCI_RECEIVED_MSG_FIFO_SIZE],[$enableval],[Received messages FIFO size])
    else
       echo Set the received messages FIFO size to $DEFAULT_RECEIVED_MSG_FIFO_SIZE
      AC_DEFINE_UNQUOTED([OMCI_RECEIVED_MSG_FIFO_SIZE],[$DEFAULT_RECEIVED_MSG_FIFO_SIZE],[Received messages FIFO size])
    fi
   ],
   [
      echo Set the received messages FIFO size to $DEFAULT_RECEIVED_MSG_FIFO_SIZE
      AC_DEFINE_UNQUOTED([OMCI_RECEIVED_MSG_FIFO_SIZE],[$DEFAULT_RECEIVED_MSG_FIFO_SIZE],[Received messages FIFO size])
   ]
)

dnl select lists implementation
AC_ARG_ENABLE(list-no-free,
              AS_HELP_STRING([--enable-list-no-free],[do not free unused list entries]),
   [
    if test -n "$enableval"; then
       echo Do not free unused list entries
      AC_DEFINE_UNQUOTED([OMCI_LIST_NO_FREE],[$enableval],[Do not free unused list entries])
    fi
   ],
   [
      echo Free unused list entries
   ]
)

dnl enable\disable VoIP support
AC_SUBST([INCLUDE_OMCI_ONU_VOIP],[no])
AM_CONDITIONAL(INCLUDE_OMCI_ONU_VOIP, false)
AC_ARG_ENABLE(voip,
              AS_HELP_STRING([--enable-voip],[enable VoIP support]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_OMCI_ONU_VOIP], [1], [Enable VoIP support])
         AC_SUBST([INCLUDE_OMCI_ONU_VOIP],[yes])
         AM_CONDITIONAL(INCLUDE_OMCI_ONU_VOIP, true)

         echo Enable VoIP support
      else
         echo Disable VoIP support
      fi
   ],
   [
      echo Disable VoIP support
   ]
)

dnl set PJSIP library path
AC_SUBST([PJSIP_LIBRARY_PATH],[''])
AC_ARG_ENABLE(pjsip-library,
    AS_HELP_STRING([--enable-pjsip-library=-L/path/to/your/pjsip/lib] , [Set the PJSIP library path.]),
    [
        if test -n "$enableval"; then
            if test "$INCLUDE_OMCI_ONU_VOIP" = no; then
               AC_MSG_WARN(["Specified PJSIP library path without VoIP support enabled"])
            fi

            echo Set the PJSIP library path to $enableval
            AC_SUBST([PJSIP_LIBRARY_PATH],[$enableval])
        else
           if test "$INCLUDE_OMCI_ONU_VOIP" = yes; then
               AC_MSG_ERROR(["Please specify PJSIP library path"])
           fi
        fi
    ],
    [
        if test "$INCLUDE_OMCI_ONU_VOIP" = yes; then
            AC_MSG_ERROR(["Please specify PJSIP library path"])
        fi
    ]
)

dnl include\exclude OMCI Unified Configuration Interface
AC_SUBST([INCLUDE_OMCI_ONU_UCI],['no'])
AM_CONDITIONAL(INCLUDE_OMCI_ONU_UCI, false)
AC_ARG_ENABLE(omci-uci,
              AS_HELP_STRING([--enable-omci-uci],
                             [enable OMCI Unified Configuration Interface]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_OMCI_ONU_UCI], [1],[Enable OMCI Unified Configuration Interface])
         AM_CONDITIONAL(INCLUDE_OMCI_ONU_UCI, true)
         echo Enable OMCI Unified Configuration Interface
      else
         echo Disable OMCI Unified Configuration Interface
      fi
   ],
   [
      echo Disable OMCI Unified Configuration Interface
   ]
)

dnl Specify Unified Configuration Interface Version
AM_CONDITIONAL([HAVE_LIB_UCI_MAP],true)
AC_ARG_ENABLE(libucimap,
              AS_HELP_STRING([--enable-libucimap],
                             [ Link ucimap library available in UCI version 2011-xx-xx (default=yes)]),
   [
      if test "$enableval" = yes; then
         AM_CONDITIONAL([HAVE_LIB_UCI_MAP],true)
      else
         AM_CONDITIONAL([HAVE_LIB_UCI_MAP],false)
      fi
   ]
)

dnl include\exclude dmalloc
AC_SUBST([INCLUDE_OMCI_ONU_DMALLOC],['no'])
AM_CONDITIONAL(INCLUDE_OMCI_ONU_DMALLOC, false)
AC_ARG_ENABLE(omci-dmalloc,
              AS_HELP_STRING([--enable-omci-dmalloc],
                             [enable dmalloc]),
   [
      if test "$enableval" = yes; then
         AC_DEFINE([INCLUDE_OMCI_ONU_DMALLOC], [1],[Enable dmalloc])
         AM_CONDITIONAL(INCLUDE_OMCI_ONU_DMALLOC, true)
         echo Enable dmalloc
      else
         echo Disable dmalloc
      fi
   ],
   [
      echo Disable dmalloc
   ]
)

dnl enable\disable remote ONU
AC_SUBST([INCLUDE_REMOTE_ONU],[yes])
AC_ARG_ENABLE(remote-onu,
              AS_HELP_STRING([--enable-remote-onu],
                             [enable remote ONU]),
   [
      if test "$enableval" = yes; then
         echo Enable remote ONU
         AC_DEFINE([INCLUDE_REMOTE_ONU], [1], [Enable remote ONU])
         AC_SUBST([INCLUDE_REMOTE_ONU],[$enableval])
         AM_CONDITIONAL(INCLUDE_REMOTE_ONU, true)
      else
         echo Disable remote ONU
         AM_CONDITIONAL(INCLUDE_REMOTE_ONU, false)
      fi
   ],
   [
      echo Enable remote ONU
      AC_DEFINE([INCLUDE_REMOTE_ONU], [1], [Enable remote ONU])
      AC_SUBST([INCLUDE_REMOTE_ONU],[$enableval])
      AM_CONDITIONAL(INCLUDE_REMOTE_ONU, true)
   ]
)

dnl enable\disable driver simulation
AC_SUBST([INCLUDE_DRIVER_SIMULATION],[no])
AC_ARG_ENABLE(driver-simulation,
              AS_HELP_STRING([--enable-driver-simulation],
                             [enable driver simulation]),
   [
      if test "$enableval" = yes; then
         echo Enable driver simulation
         AC_DEFINE([INCLUDE_DRIVER_SIMULATION], [1], [Enable driver simulation])
         AC_SUBST([INCLUDE_DRIVER_SIMULATION],[$enableval])
         AM_CONDITIONAL(INCLUDE_DRIVER_SIMULATION, true)
      else
         echo Disable driver simulation
         AM_CONDITIONAL(INCLUDE_DRIVER_SIMULATION, false)
      fi
   ],
   [
      echo Disable driver simulation
      AM_CONDITIONAL(INCLUDE_DRIVER_SIMULATION, false)
   ]
)

AC_CONFIG_FILES([Makefile src/Makefile tools/Makefile])
AC_OUTPUT
